# Turmas_FFR

./: .gitignore  README.md  _config.yml  csv_to_md.py  horario_2015_2.csv  pyproject.toml
2023.1/CIMATEC/Modelagem_da_informacao_da_construcao/: av1_edital.md  av1_edital_mic.md  av2_edital_mic.md  av3_edital_mic.md  plano_mic.md
2023.1/CIMATEC/Modelagem_parametrica_simulacoes/: av1_edital_mpsd.md  av2_edital_mpsd.md  av3_edital_mpsd.md  donwl_grass_pkgs.ps1  plano_mpsd.md
2023.1/CIMATEC/Represetacao_digital_da_construcao/: av1_edital.md  av1_edital_rdc.md  av2_edital_rdc.md  av3_edital_rdc.md  plano_rdc.md
2023.1/UFBA/info_01/: plano_info_01.md
2023.2/CIMATEC/Modelagem_da_informacao_da_construcao/: av1_edital_mic_arq.md  av2_edital_mic.md  av3_edital_mic.md  plano_mcu_arq.md  plano_mic.md  plano_mic_arq.md  plano_mic_eng.md  plano_mic_eng_export.md
2023.2/CIMATEC/Modelagem_parametrica_simulacoes/: av3_edital_mpsd.md
2023.2/CIMATEC/Represetacao_digital_da_construcao/: RDC_Calendario_de_Aulas_2023.2.csv  av1_edital_rdc.md  av1_guia_de_layers.md  plano_rdc.md  plano_rdc_old.md
2023/CIMATEC/Modelagem_parametrica_simulacoes/: plano_mpsd.md
2024.2/CIMATEC/: Calendário 2024.xopp
2025.2/UFBA/Topografia/: cronograma_topo.md
2026.1/CIMATEC/: datas_gerais.md
REP_DIG_CONS/: PROJ_Exemplo_V2.dwg  PROJ_PLANTAS.bak  TÉRREO.bak  TÉRREO_v3.dwg  TÉRREO_v4.dwg
install_packages/: down_grass_lib.py
sorteio_grupo_temas/: MPSD_AV2.xlsx  MPSD_AV2_2026_1.xlsx  sorteio.ipynb
util/: cronograma_2026_1_mic.md  cronograma_2026_1_mpsd.md  cronograma_td1.md  gerar_datas.ipynb
(+140 files in other folders)
