[tool.poetry]
name = "Turmas_FFR"
version = "0.1.0"
description = ""
authors = ["Fernando Ferraz Ribeiro <ffribeiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.5"
pandas = "^2.2.3"
geopandas = "^1.0.1"
mapclassify = "^2.8.1"
libpysal = "^4.13.0"
splot = "^1.1.7"
esda = "^2.7.0"
pysal = "^25.1"
contextily = "^1.6.2"
openpyxl = "^3.1.5"


[tool.poetry.dev-dependencies]

ipykernel = "^6.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
